# PersonaMimic_Final

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  OPTIMIZE.bat  OPTIMIZE_PC.ps1  README.md  START_AI.bat  START_EXECUTIVE.bat  START_N8N.bat  activate_n8n.py  activate_n8n_workflows.py  cloudbuild.yaml  docker-compose.yml  kind-config.yaml  migrate_db_root.py  persona_mimic.db-shm  persona_mimic.db-wal  pyproject.toml  test_n8n_workflows.py  update_n8n_wf.py
backend/: .dockerignore  .env  .env.example  Dockerfile  brain_codesmith_log.json  brain_dre_log.json  go.mod  main.py  mcp_server.py  orchestrator.py  predictive_model.pkl  pyproject.toml  settings.json  studio_cli.py  verify_system.py
backend/app/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/chat/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/config/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  cache.py  errors.py  factory.py  logging.py  middleware.py  observability.py  ollama_utils.py  paths.py  startup.py  uploads.py
backend/app/database/: database.py  memory_service.py  service.py
backend/app/forge/: diagnostic.py  mapper.py  repository.py  router.py  service.py  steering.py  training.py
backend/app/n8n/: router.py
backend/app/products/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/reverse_engineering/: catalog.py  models.py  (+4 more)
backend/backend/: test_system.db-shm  test_system.db-wal
backend/custom_tools/: appsmith_grid_coordinate_absolute_positioning.py  autogpt_sensory_synthesis_module.py  codesmith_node_manager.py  metagpt_agent_for_code_generation.py  metagpt_code_synthesis_agent.py  node_registry.json  phoenix_protocol_heartbeat_timing.py  sensory_synthesis_engine_sse.py  tool_registry.json
backend/logs/: ava_state.json  brain_ava_log.json  brain_codesmith_log.json  brain_dre_log.json  brain_fenko_log.json  brain_masterbrain_log.json  brain_trendsifter_log.json  codesmith_state.json  dre_state.json  fenko_state.json  masterbrain_state.json  trendsifter_state.json
backend/scratch/: check_api.py  check_postgres_key.py  dump_swarm_status.py  force_inject_whop.py  force_inject_whop_debug.py  init_sqlite_db.py  inject_whop_mission.py  inspect_sqlite.py  migrate_whop_keys.py  test_decrypt.py  test_ollama_conn.py  test_whop_connectivity.py  update_env_whop.py
backend/scripts/: check_db.py  check_tasks_deep.py  debug_db.py  enable_cloud.py  fix_postgres_sequences.py  initialize_constraints.py  inject_reverse_engineering_task.py  inject_studio_task.py  live_test.py  migrate_to_alloydb.py  reset_failed_tasks.py  set_local_mode.py  storage_migration.py  sync_tools.py  test_api.py  test_synthesis.py  train_unsloth.py  validate_archetypes.py  verify_cloud_production_e2e.py  verify_environment.py  verify_gcp_tools.py  verify_industrial_stack.py  verify_production.py
backend/static/: index.html
(+715 files in other folders)
